--- a/bam.data.schema/bam.data.schema.csproj
+++ b/bam.data.schema/bam.data.schema.csproj
@@ -53,7 +53,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\bam.base\bam.base\bam.base.csproj" />
-    <ProjectReference Include="..\..\bam.data\bam.data\bam.data\bam.data.csproj" />
+    <ProjectReference Include="..\..\bam.data\bam.data\bam.data.csproj" />
     <ProjectReference Include="..\..\bam.javascript\bam.javascript\bam.javascript.csproj" />
   </ItemGroup>
 
